Fixed issue of overflow

--- a/Drum_Kit/styles.css
+++ b/Drum_Kit/styles.css
@@ -2,7 +2,9 @@ body {
   text-align: center;
   background-image: radial-gradient(circle, rgba(25, 136, 247, 1) 0%, rgba(247, 25, 136, 1) 100%);
 }
-
+body,html{
+  overflow: hidden;
+}
 h1 {
   font-size: 5rem;
   color: #fff;
